Auto open fix and align fix

--- a/data/vertical_slider.css
+++ b/data/vertical_slider.css
@@ -115,8 +115,12 @@
 	min-height: 300px;
 	width: 100%;
 }
-.destination, .deals {
+.destination {
 	text-align: left;
+	min-height: 340px;
+	margin-top: 20px;
+}
+.deals {
 	min-height: 340px;
 	margin-top: 20px;
 }
